<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="@color/gruvbox_bg">

    <!-- App Icon -->
    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:src="@mipmap/ic_launcher" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/email_string"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gruvbox_edittext_background"
        android:textColor="@color/gruvbox_fg"
        android:textColorHint="@color/gruvbox_gray"
        android:gravity="center"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gruvbox_edittext_background"
        android:textColor="@color/gruvbox_fg"
        android:textColorHint="@color/gruvbox_gray"
        android:gravity="center"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_string"
        android:background="@color/gruvbox_yellow"
        android:textColor="@color/gruvbox_bg"
        android:layout_marginTop="22dp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_marginTop="20dp"/>
</LinearLayout>
